chore: Clarification of Duffy Group.

--- a/Home.html
+++ b/Home.html
@@ -81,7 +81,7 @@
                 if (browserNow.getFullYear() > 2025)
                     document.write("-" + browserNow.getFullYear());
             </script>
-            Duffy. All Rights Reserved.
+            Duffy Group. All Rights Reserved.
         </footer>
     </body>
 </html>
