feat: Added Homage to Bernard Duffy, my Father.

--- a/Home.html
+++ b/Home.html
@@ -2,13 +2,13 @@
     <head>
         <title>Duffy</title>
 
-        <meta name="keywords" content="Duffy, In Memory">
+        <meta name="keywords" content="Duffy, Bernard Duffy, In Memory">
         
         <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
         <meta http-equiv="Pragma" content="no-cache">
         <meta http-equiv="Expires" content="0">
 
-        <link rel="stylesheet" href="Branding/V1.0.0.0/Duffy.css?circumventCache=0" />
+        <link rel="stylesheet" href="Branding/V1.0.0.0/Duffy.css?circumventCache=1" />
     </head>
     <body>
         <header id="headerDuffy">
@@ -46,6 +46,8 @@
                 <hr />
                 &nbsp;
                 <a href="Home.html">Home</a>
+                &nbsp;
+                <a href="BernardDuffy.html">Bernard Duffy</a>
                 &nbsp;
                 <a href="About.html">About</a>
                 <hr />
