--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Duffy</title>
 
-        <meta name="keywords" content="Duffy, In Memory">
+        <meta name="keywords" content="Duffy, Bernard Duffy, In Memory">
         
         <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
         <meta http-equiv="Pragma" content="no-cache">
