chore: Punctuation change.

--- a/BernardDuffy.html
+++ b/BernardDuffy.html
@@ -74,7 +74,7 @@
 
             <p>He later became a Milk-Man and, later still, a Security Guard.</p>
 
-            <p>He was a sensitive yet strong, under-stated man.</p>
+            <p>He was a sensitive, yet strong, under-stated man.</p>
             
             <table id="tableBernardDuffy">
                 <thead>
