chore: A further clarification.

--- a/BernardDuffy.html
+++ b/BernardDuffy.html
@@ -70,7 +70,7 @@
 
             <p>He was born and grew up in and around Aghabog, Co. Monaghan, Ireland.</p>
 
-            <p>He began life as a Manual Labourer, and then trained to be a Psychiatric Nurse, at St. Patrick's Hospital in Dublin.</p>
+            <p>He began life as a Manual Labourer, and then trained to be a Psychiatric Nurse, at St. Patrick's Hospital in Dublin, Ireland.</p>
 
             <p>He later became a Milk-Man and, later still, a Security Guard.</p>
 
