chore: Some Title Case stuff.

--- a/About.html
+++ b/About.html
@@ -69,7 +69,7 @@
             <p>This page provides background and context about the Duffy Group.</p>
             
             <p>We were formed, around 6:30 am UTC + 1 on Tuesday 3-June-2025, in Lucan, Co. Dublin, Ireland, with the vision of stewardship over the <a target="_blank" href="https://www.CentralSecurityService.one">Central Security Service</a>
-            and other initiatives related to heritage, legacy, and societal development.</p>
+            and other initiatives related to Heritage, Legacy, and Societal Development.</p>
             
             <table id="tableAbout">
                 <thead>
