feat: Reverted to my given name, Eamonn, without a fada. I am also slightly ashamed to be Irish right now.

--- a/About.html
+++ b/About.html
@@ -2,7 +2,7 @@
     <head>
         <title>Duffy</title>
 
-        <meta name="keywords" content="Duffy, In Memory, Bernard Duffy, Bronwench, Eamonn Duffy, &Eacute;amonn Anthony Duffy">
+        <meta name="keywords" content="Duffy, In Memory, Bernard Duffy, Bronwench, Eamonn Duffy, Eamonn Anthony Duffy">
         
         <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
         <meta http-equiv="Pragma" content="no-cache">
@@ -78,10 +78,10 @@
                 </thead>
                 <tr>
                     <td align="center">
-                        <a target="_blank" href="Images/&Eacute;amonn Duffy - 20210924_204416 - Cropped - 000.jpg"><img src="Images/&Eacute;amonn Duffy - 20210924_204416 - Cropped - 000.jpg" height="400" alt="Eamonn/&Eacute;amonn Anthony Duffy" title="Eamonn/&Eacute;amonn Anthony Duffy" /></a>
+                        <a target="_blank" href="Images/&Eacute;amonn Duffy - 20210924_204416 - Cropped - 000.jpg"><img src="Images/&Eacute;amonn Duffy - 20210924_204416 - Cropped - 000.jpg" height="400" alt="Eamonn Anthony Duffy" title="Eamonn Anthony Duffy" /></a>
                     </td>
                     <td align="center">
-                        <p><b><a target="_blank" href="https://www.EamonnDuffy.com/">Eamonn/&Eacute;amonn Anthony Duffy</a></b></p>
+                        <p><b><a target="_blank" href="https://www.EamonnDuffy.com/">Eamonn Anthony Duffy</a></b></p>
                         <p>I am the first member, and the first/initial head/leader, of the Duffy Group, initiated in 2025.</p>
                         <p>I was born in Dublin, Ireland, in September 1966.</p>
                         <p>In later life, I was diagnosed as Autistic, with perhaps a hint of ADHD.</p>
