--- a/BernardDuffy.html
+++ b/BernardDuffy.html
@@ -2,7 +2,7 @@
     <head>
         <title>Duffy</title>
 
-        <meta name="keywords" content="Duffy, In Memory, Bernard Duffy, Bronwench, Eamonn Duffy, &Eacute;amonn Anthony Duffy">
+        <meta name="keywords" content="Duffy, In Memory, Bernard Duffy, Bronwench, Eamonn Duffy, Eamonn Anthony Duffy">
         
         <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
         <meta http-equiv="Pragma" content="no-cache">
